# 3-Tier-Reranking

./: .gitattributes  .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.html  README.md  README.rst  checklist.md  discussion.html  discussion.md  docker-compose.yml  pipeline.py  pyproject.toml  rerank.py  retrieval.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci_cd.yml
cleaned_data/cleaned_crisisfacts_data.csv/: .part-00004-1ef2d7bb-33af-4d09-8366-b46f65b6be85-c000.csv.crc  .part-00010-1ef2d7bb-33af-4d09-8366-b46f65b6be85-c000.csv.crc  .part-00011-1ef2d7bb-33af-4d09-8366-b46f65b6be85-c000.csv.crc  .part-00021-1ef2d7bb-33af-4d09-8366-b46f65b6be85-c000.csv.crc  part-00000-1ef2d7bb-33af-4d09-8366-b46f65b6be85-c000.csv  part-00001-1ef2d7bb-33af-4d09-8366-b46f65b6be85-c000.csv  part-00017-1ef2d7bb-33af-4d09-8366-b46f65b6be85-c000.csv
cleaned_data/cleaned_crisisfacts_data.parquet/: .part-00002-7d6550c9-41f3-42c1-9595-32af5273a344-c000.snappy.parquet.crc  .part-00008-7d6550c9-41f3-42c1-9595-32af5273a344-c000.snappy.parquet.crc  .part-00011-7d6550c9-41f3-42c1-9595-32af5273a344-c000.snappy.parquet.crc  .part-00013-7d6550c9-41f3-42c1-9595-32af5273a344-c000.snappy.parquet.crc  .part-00017-7d6550c9-41f3-42c1-9595-32af5273a344-c000.snappy.parquet.crc  part-00012-7d6550c9-41f3-42c1-9595-32af5273a344-c000.snappy.parquet  part-00021-7d6550c9-41f3-42c1-9595-32af5273a344-c000.snappy.parquet
data/: combined_data.csv  data_collection.ipynb
data/cleaned_crisisfacts_data.csv/: .part-00002-1ef2d7bb-33af-4d09-8366-b46f65b6be85-c000.csv.crc  .part-00012-1ef2d7bb-33af-4d09-8366-b46f65b6be85-c000.csv.crc  .part-00013-1ef2d7bb-33af-4d09-8366-b46f65b6be85-c000.csv.crc  part-00008-1ef2d7bb-33af-4d09-8366-b46f65b6be85-c000.csv  part-00009-1ef2d7bb-33af-4d09-8366-b46f65b6be85-c000.csv  part-00010-1ef2d7bb-33af-4d09-8366-b46f65b6be85-c000.csv  part-00011-1ef2d7bb-33af-4d09-8366-b46f65b6be85-c000.csv  part-00012-1ef2d7bb-33af-4d09-8366-b46f65b6be85-c000.csv  part-00013-1ef2d7bb-33af-4d09-8366-b46f65b6be85-c000.csv  part-00014-1ef2d7bb-33af-4d09-8366-b46f65b6be85-c000.csv  part-00015-1ef2d7bb-33af-4d09-8366-b46f65b6be85-c000.csv  part-00016-1ef2d7bb-33af-4d09-8366-b46f65b6be85-c000.csv  part-00017-1ef2d7bb-33af-4d09-8366-b46f65b6be85-c000.csv  part-00018-1ef2d7bb-33af-4d09-8366-b46f65b6be85-c000.csv  part-00019-1ef2d7bb-33af-4d09-8366-b46f65b6be85-c000.csv  (+4 more)
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
initial_cleaned_data/: 00-CrisisFACTS.Downloader.ipynb
tests/: __init__.py  test_cririssum.py  test_main.py
(+131 files in other folders)
