[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cririssum"
version = "0.1.0"
description = "Efficient and Scalable Summarization System for CrisisFacts"
readme = "README.rst"
authors = [
  {name = "Dheeraj Oruganty, Will Corbin, Pranav Patil", email = "db2winfb@gmail.com"}
]
maintainers = [
  {name = "Dheeraj Oruganty, Will Corbin, Pranav Patil", email = "db2winfb@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}

dependencies = [
    "fastapi",
    "requests",
    "uvicorn",
    "sentence-transformers",
    "pandas",
    "python-multipart",
    "rank-bm25",
    "huggingface_hub[hf_transfer]",
    "hf_transfer",
    "torch",
    "rouge-score==0.1.2",
    "httpx",
    "gradio",
]

[project.optional-dependencies]
gpu = [
    "faiss-gpu",
    "numpy<2.0",
]

[tool.pdm]
# Optional PDM tool configuration for managing dependencies (optional)

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true